--- a/zenuicom.html
+++ b/zenuicom.html
@@ -49,10 +49,10 @@
         <section class="wrapper">
             <div class="content">
                 <h1>ZenUI.com revamp</h1>
-                <p>Hahago 為一款結合了運動、生活消費及社群功能的 APP。使用者透過計步獲得點數換取回饋獎勵，結合商家消費享有指定優惠折扣。並可與好友共同組團相互激勵、解獎勵任務等，以簡單、趣味的方式鼓勵民眾於生活中養成運動習慣。</p><br>
-                <p>Logo 設計以速度感、流線線條帶出運動時的動感，並結合愉悅、喜樂的表情象徵及揮汗運動的，代表動在生活、樂在生活之意涵。同時為傳遞 APP 新穎精神，設計中賦予 Logo 更多可能性，依照活動、節慶需求可彈性變換標誌風貌，傳達活撥、創新的品牌精神。</p>
+                <p>ZenUI.com 為專門提供 zenfone 手機軟體資訊的平台。<br>網站內容定期發布最新軟體資訊、分享各式小技巧，提供 zenfone 使用者獲得最流暢的使用體驗。</p>
+                <p>ZenUI.com revamp 專案透過定義網站定位，重新規劃網站架構、SEO，致力提升網站瀏覽人數、點擊率，降低跳出率。</p>                <p><br></p>
                 <p><br></p>
-                <p><br></p>
+		<p><br></p>
                 <h2>－Structure－</h2>
                 <p align="center"><img class=img src="img/projects/zenui.com/flow.jpg"></p>
                 <p><br></p>
