--- a/vr360.html
+++ b/vr360.html
@@ -47,8 +47,7 @@
 		<section class="wrapper">
 			<div class="content">
 			  <h1>ZenUI VR 360</h1>
-			  <p>ZenCircle 是一個開放的相片分享社群網路平台，只要簡單的步驟讓您輕鬆上傳照片，用影像記錄、分享您的精采生活。在這裡，您可以看到達人的影像創作，或發掘各式各樣有趣的作品，透過按讚、留言、追蹤等方式與全世界的同好交流。</p>
-			  <p><br></p>
+                          <p>ZenUI VR 360 為 Zenfone 手機內開發之虛擬實境體驗功能，發佈於「華碩圖片庫」、「魔術相片拼貼」、「ZenCircle」三隻應用程式中。於 360° 全景相片瀏覽中，可以輕鬆切換不同的瀏覽模式如觸碰滑動，陀螺儀旋轉，或配合特定 VR 眼镜／頭盔，進入 VR 模式體驗身歷其境般的視覺震撼與心動！</p>			  <p><br></p>
 			  <p><br></p>
 			  <p align="center"><img class=img src="img/projects/Vr 360/image1.jpg"></p>
 			  <p><br></p>
